--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>git</h1>
-
+  <form action="/test" method="get">
+    <label>이름 : 
+      <input type="text" name="name"/>
+    </label>
+    <label> 나이: 
+      <input type="text" name="age"/>
+    </label>
+      제출하기: <input type="submit", value="submit">
+    </form>
+  
   <script src="./app.js"></script>
 </body>
 </html>
