GET, POST, File system->border style 수정

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@ body {
         }
 
     .allContainer {
-      border: 1px solid black;
+      border: 1px solid silver;
       border-radius: 30px;
     }
 
     .getPostcontainer {
-      border: 1px solid black;
+      border: 1px solid silver;
       padding: 0px 0px 30px 0px;
+      border-radius: 20px;
+      margin-bottom: 50px;
     }
     .getPostcontainer h2 {
       text-align: center;
@@ -51,6 +53,7 @@ body {
       display: flex;
       justify-content: center;
       gap: 10px;
+
     }
    
 
